--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
-    "test": "NODE_ENV=test electron ."
+    "test": "node test.js"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -16,6 +16,7 @@
     "get-port": "^7.1.0",
     "googleapis": "^133.0.0",
     "keytar": "^7.9.0",
+    "marked": "^9.1.5",
     "openai": "^4.30.0"
   },
   "devDependencies": {
