--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shifted",
+  "name": "rift",
   "version": "0.1.0",
-  "description": "Shifted: Personal assistant with Google Calendar, Email, Drive, Docs, and Meet integration",
+  "description": "Rift: Personal assistant with Google Calendar, Email, Drive, Docs, and Meet integration",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
