--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 
 # Environment variables
 .env
-README.md
 # Node modules
 node_modules/
 
@@ -18,3 +17,23 @@ out/
 # IDE files
 .vscode/
 .idea/
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+node_modules
+dist
+dist-ssr
+*.local
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
